2015-11-04 - 1.1.1:
 - Fixed issue with MESOS_LOG_DIR not logging to correct directory.

2015-10-22 - 1.1.0:
 - Bump Mesos version to 0.24.1

2015-10-16 - 1.0.2:
  - Bump to Mesos 0.23.1-0.2.61.ubuntu1404
  - Bump to Docker to 1.8.3

2015-10-07 - 1.0.1:
  - Updated to use Oracle java 8. 