@@ -1,3 +1,6 @@
+2015-11-08 - 1.1.2:
+ - Added logrotate support.
+
 2015-11-04 - 1.1.1:
  - Fixed issue with MESOS_LOG_DIR not logging to correct directory.
 
